update some copy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Big Day</title>
+	<title>Daniel &amp; Sarah's Best Day Ever</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -235,7 +235,7 @@
 
 	<div class="separator parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8">
 		<div class="flowers"></div>
-		<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Big Day</h2>
+		<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Best Day Ever</h2>
 		<div class="decor"><i class="fa fa-heart-o"></i></div>
 		<div class="countdown-area" data-final-date="2016/12/31 23:59:59" data-after-countdown="Thank you for attending our wedding!"></div>
 	</div>
