--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 	<link rel="stylesheet" href="js/vendor/owl.carousel.2.1.6/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/big-day.css">
 	<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107726616-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-107726616-1');
+	</script>
+	
 </head>
 
 <body>
@@ -515,15 +526,6 @@
 	<script src="js/rsvp.js"></script>
 	<script src="js/main.js"></script>
 
-	<!-- Google Analytics: uncomment the code below and change UA-XXXXX-X to be your site's ID. -->
-	<!-- <script>
-					(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-					function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-					e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-					e.src='//www.google-analytics.com/analytics.js';
-					r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-					ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-			</script> -->
 </body>
 
 </html>
