--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107726616-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
 		gtag('config', 'UA-107726616-1');
 	</script>
-	
+
 </head>
 
 <body>
@@ -93,19 +93,35 @@
 
 	<section id="hero" class="section-hero">
 		<div class="owl-carousel owl-full-width owl-theme">
-			<div class="item"><img src="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" alt="" class="img-as-bg"></div>
-			<div class="item"><img src="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" alt="" class="img-as-bg"></div>
-			<div class="item"><img src="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" alt="" class="img-as-bg"></div>
-			<div class="item"><img src="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" alt="" class="img-as-bg"></div>
-			<div class="item"><img src="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" alt="" class="img-as-bg"></div>
+			<div class="item">
+				<img src="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" alt="" class="img-as-bg">
+			</div>
+			<div class="item">
+				<img src="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" alt="" class="img-as-bg">
+			</div>
+			<div class="item">
+				<img src="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" alt="" class="img-as-bg">
+			</div>
+			<div class="item">
+				<img src="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" alt="" class="img-as-bg">
+			</div>
+			<div class="item">
+				<img src="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" alt="" class="img-as-bg">
+			</div>
 		</div>
 		<div class="announcement-wrapper">
 			<div class="announcement animation-chain" data-animation="fadeInUp">
 
 
 				<h2>Best day ever !</h2>
-				<h1><span class="name">Daniel</span><span class="and">&</span><span class="name">Sarah</span></h1>
-				<p class="date"><span>2017.04.20</span></p>
+				<h1>
+					<span class="name">Daniel</span>
+					<span class="and">&</span>
+					<span class="name">Sarah</span>
+				</h1>
+				<p class="date">
+					<span>2017.04.20</span>
+				</p>
 
 			</div>
 			<div class="cta">
@@ -118,14 +134,30 @@
 		<div class="menu-wrapper">
 			<button class="open-menu">Menu</button>
 			<ul class="menu">
-				<li><a class="scroll-link" href="#hero">Home</a></li>
-				<li><a class="scroll-link" href="#couple">Couple</a></li>
-				<li><a class="scroll-link" href="#story">Story</a></li>
-				<li><a class="scroll-link" href="#events">Events</a></li>
-				<li><a class="scroll-link" href="#rsvp">RSVP</a></li>
-				<li><a class="scroll-link" href="#hotels">Hotels</a></li>
-				<li><a class="scroll-link" href="#people">People</a></li>
-				<li><a class="scroll-link" href="#gifts">Gifts</a></li>
+				<li>
+					<a class="scroll-link" href="#hero">Home</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#couple">Couple</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#story">Story</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#events">Events</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#rsvp">RSVP</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#hotels">Hotels</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#people">People</a>
+				</li>
+				<li>
+					<a class="scroll-link" href="#gifts">Gifts</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
@@ -162,12 +194,24 @@
 	<div class="separator">
 		<div class="separator-carousel">
 			<div class="owl-carousel owl-theme">
-				<a href="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" class="item"><img src="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" alt="" class="img-as-bg"></a>
-				<a href="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" class="item"><img src="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" alt="" class="img-as-bg"></a>
-				<a href="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" class="item"><img src="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" alt="" class="img-as-bg"></a>
-				<a href="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" class="item"><img src="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" alt="" class="img-as-bg"></a>
-				<a href="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" class="item"><img src="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" alt="" class="img-as-bg"></a>
-				<a href="img/engagement/21762588_1441146302588102_6228800564696333016_o.jpg" class="item"><img src="img/engagement/21762588_1441146302588102_6228800564696333016_o.jpg" alt="" class="img-as-bg"></a>
+				<a href="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" class="item">
+					<img src="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" alt="" class="img-as-bg">
+				</a>
+				<a href="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" class="item">
+					<img src="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" alt="" class="img-as-bg">
+				</a>
+				<a href="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" class="item">
+					<img src="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" alt="" class="img-as-bg">
+				</a>
+				<a href="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" class="item">
+					<img src="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" alt="" class="img-as-bg">
+				</a>
+				<a href="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" class="item">
+					<img src="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" alt="" class="img-as-bg">
+				</a>
+				<a href="img/engagement/21762588_1441146302588102_6228800564696333016_o.jpg" class="item">
+					<img src="img/engagement/21762588_1441146302588102_6228800564696333016_o.jpg" alt="" class="img-as-bg">
+				</a>
 			</div>
 		</div>
 	</div>
@@ -247,7 +291,9 @@
 	<div class="separator parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8">
 		<div class="flowers"></div>
 		<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Best Day Ever</h2>
-		<div class="decor"><i class="fa fa-heart-o"></i></div>
+		<div class="decor">
+			<i class="fa fa-heart-o"></i>
+		</div>
 		<div class="countdown-area" data-final-date="2016/12/31 23:59:59" data-after-countdown="Thank you for attending our wedding!"></div>
 	</div>
 
@@ -259,12 +305,16 @@
 		</div>
 		<ul class="event-list">
 			<li class="flex-responsive">
-				<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
+				<div class="event-thumbnail">
+					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+				</div>
 				<div class="event-details animation-chain" data-animation="fadeInUp">
 					<h3>Wedding Ceremony</h3>
 					<ul class="event-info">
-						<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-						<li><span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
+						<li>
+							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
+						<li>
+							<span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -277,12 +327,16 @@
 				</div>
 			</li>
 			<li class="flex-responsive">
-				<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
+				<div class="event-thumbnail">
+					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+				</div>
 				<div class="event-details animation-chain" data-animation="fadeInUp">
 					<h3>Wedding Dinner</h3>
 					<ul class="event-info">
-						<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-						<li><span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
+						<li>
+							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
+						<li>
+							<span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -295,12 +349,16 @@
 				</div>
 			</li>
 			<li class="flex-responsive">
-				<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
+				<div class="event-thumbnail">
+					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+				</div>
 				<div class="event-details animation-chain" data-animation="fadeInUp">
 					<h3>Wedding Party</h3>
 					<ul class="event-info">
-						<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-						<li><span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
+						<li>
+							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
+						<li>
+							<span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -316,7 +374,8 @@
 	</section>
 
 	<section id="rsvp" class="section-rsvp">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_BQpv2FsBn9XI-Wx8voEP7O45YLMacyFKGrYA5KTdUcYm9Q/viewform?embedded=true" width="100%" height="1530" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_BQpv2FsBn9XI-Wx8voEP7O45YLMacyFKGrYA5KTdUcYm9Q/viewform?embedded=true"
+		 width="100%" height="1530" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</section>
 
 	<section id="hotels" class="section-events">
@@ -327,11 +386,14 @@
 		</div>
 		<ul class="event-list">
 			<li class="flex-responsive">
-				<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
+				<div class="event-thumbnail">
+					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+				</div>
 				<div class="event-details animation-chain" data-animation="fadeInUp">
 					<h3>Hotel A</h3>
 					<ul class="event-info">
-						<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
+						<li>
+							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -344,7 +406,8 @@
 				</div>
 			</li>
 			<li class="flex-responsive">
-				<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9W_iMk8m5ZTOHLUTwN6QhNPg_B0rALlc&q=Greenville,SC" allowfullscreen>
+				<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9W_iMk8m5ZTOHLUTwN6QhNPg_B0rALlc&q=Greenville,SC"
+				 allowfullscreen>
 				</iframe>
 			</li>
 		</ul>
@@ -473,7 +536,9 @@
 		<h3>Daniel &amp; Sarah</h3>
 		<a href="https://www.facebook.com/hashtag/ftwforeverthewithers">#FTWforeverthewithers</a>
 		<p>Copyright 2016. All rights reserved.</p>
-		<a href="#hero" class="scroll-link scroll-up"><i class="fa fa-arrow-up"></i></a>
+		<a href="#hero" class="scroll-link scroll-up">
+			<i class="fa fa-arrow-up"></i>
+		</a>
 	</footer>
 
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
@@ -487,33 +552,6 @@
 	<script src="js/parallax.js"></script>
 	<script src="js/rsvp.js"></script>
 	<script src="js/main.js"></script>
-	
-	<!-- Form submission handler to GoogleDocs -->
-	<script data-cfasync="false" type="text/javascript">
-		function postToGoogle() {
-			var field1 = $("input[type='radio'][name='qs1']:checked").val();
-			var field2 = $('#feed').val();
-
-			$.ajax({
-				url: "https://docs.google.com/forms/d/e/1FAIpQLSdjOTKRb7YiWi8OGPq6M6CRL0TpuAsUKacKp2XgruMbIp4wzg/formResponse",
-				data: {
-					"entry.924752166": field1,
-					"entry.997497831": field2
-				},
-				type: "POST",
-				dataType: "xml",
-				statusCode: {
-					0: function () {
-						//Success message
-					},
-					200: function () {
-						//Success Message
-					}
-				}
-			});
-		}
-
-	</script>
 
 
 </body>
