fix date and ampersand

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 				<h2>Best day ever !</h2>
 				<h1>
 					<span class="name">Daniel</span>
-					<span class="and">&</span>
+					<span class="and">&amp;</span>
 					<span class="name">Sarah</span>
 				</h1>
 				<p class="date">
-					<span>2017.04.20</span>
+					<span>2018.04.20</span>
 				</p>
 
 			</div>
