--- a/index.html
+++ b/index.html
@@ -215,67 +215,68 @@
 	<section id="story" class="section-story">
 		<h2>Story</h2>
 		<ul class="timeline">
+
+			<!-- Winter 2016 -->
 			<li class="flex-responsive">
 				<div class="meta">
 					<div class="timeline-thumbnail">
 						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
 					</div>
-					<div class="date">2013</div>
+					<div class="date">Winter 2016</div>
 				</div>
-
 				<svg class="heart" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg" style="height: 35px; width: 35px;">
 					<circle cx="35" cy="35" r="34" />
 				</svg>
-
 				<div class="desc animation-chain" data-animation="fadeIn">
-					<p>Lorem ipsum facilisis. Nostra, sociosqu quis, tempus, sollicitudin tincidunt at eu rhoncus lacus Donec felis Curabitur
-						ullamcorper metus eu quam ornare. Eu viverra. Cras Suspendisse dapibus Aliquam mi.</p>
+					<p>
+						We met at Man O’War CrossFit where we had both been members for 
+						about 2 years. After crossing paths for 2 years, we finally made
+						a connection and went on our first date after the New Year.	
+					</p>
 				</div>
 			</li>
-			<li class="flex-responsive">
-				<div class="meta">
-					<div class="timeline-thumbnail">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-					</div>
-					<div class="date">2014</div>
-				</div>
-				<svg class="heart" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg" style="height: 35px; width: 35px;">
-					<circle cx="35" cy="35" r="34" />
-				</svg>
 
-				<div class="desc animation-chain" data-animation="fadeIn">
-					<p>Lorem ipsum facilisis. Nostra, sociosqu quis, tempus, sollicitudin tincidunt at eu rhoncus lacus Donec felis Curabitur
-						ullamcorper metus eu quam ornare. Eu viverra. Cras Suspendisse dapibus Aliquam mi.</p>
-				</div>
-			</li>
+			<!-- Fall 2016 -->
 			<li class="flex-responsive">
 				<div class="meta">
 					<div class="timeline-thumbnail">
 						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
 					</div>
-					<div class="date">2015</div>
+					<div class="date">Fall 2016</div>
 				</div>
 				<svg class="heart" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg" style="height: 35px; width: 35px;">
 					<circle cx="35" cy="35" r="34" />
 				</svg>
 				<div class="desc animation-chain" data-animation="fadeIn">
-					<p>Lorem ipsum facilisis. Nostra, sociosqu quis, tempus, sollicitudin tincidunt at eu rhoncus lacus Donec felis Curabitur
-						ullamcorper metus eu quam ornare. Eu viverra. Cras Suspendisse dapibus Aliquam mi.</p>
+					<p>
+						After completing her residency, Sarah took the opportunity to 
+						return to Greenville and take a pharmacist position at Greenville 
+						Health System. Daniel decided to join Sarah and take the first 
+						steps on the adventure of life together.
+					</p>
 				</div>
 			</li>
+
+			<!-- Easter 2017 -->
 			<li class="flex-responsive">
 				<div class="meta">
 					<div class="timeline-thumbnail">
 						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
 					</div>
-					<div class="date">2016</div>
+					<div class="date">Easter 2017</div>
 				</div>
 				<svg class="heart" viewBox="0 0 70 70" xmlns="http://www.w3.org/2000/svg" style="height: 35px; width: 35px;">
 					<circle cx="35" cy="35" r="34" />
 				</svg>
 				<div class="desc animation-chain" data-animation="fadeIn">
-					<p>Lorem ipsum facilisis. Nostra, sociosqu quis, tempus, sollicitudin tincidunt at eu rhoncus lacus Donec felis Curabitur
-						ullamcorper metus eu quam ornare. Eu viverra. Cras Suspendisse dapibus Aliquam mi.</p>
+					<p>
+						Daniel had been planning to ask Sarah to marry him on his birthday,
+						which happened to fall on Easter Sunday. We were able to make a trip 
+						back to Kentucky for the holiday and spent a whirlwind weekend 
+						celebrating and catching up with family and friends. After Easter 
+						morning service, breakfast, and birthday gifts, Daniel proposed in
+						front of his whole family by hiding the ring in her Easter basket.
+					</p>
 				</div>
 			</li>
 		</ul>
