--- a/index.html
+++ b/index.html
@@ -297,18 +297,30 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit voluptates velit, corrupti magnam ad assumenda, debitis
 				officia quasi eaque ut necessitatibus aliquam ab quae aut. Commodi ut neque libero, itaque.</p>
 		</div>
+		
+		
+		
 		<ul class="event-list">
 			<li class="flex-responsive">
 				<div class="event-thumbnail">
-					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+					<img class="img-as-bg" src="img/Commerce-Club-Dining.jpg" alt="">
 				</div>
 				<div class="event-details animation-chain" data-animation="fadeInUp">
-					<h3>Wedding Ceremony</h3>
+					<h3>Wedding Ceremony &amp; Reception</h3>
 					<ul class="event-info">
 						<li>
-							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
+							<div class="lnr lnr-map-marker event-info-icon"></div>
+							<div class="event-info-addr">
+								<a href="https://goo.gl/maps/4Dz6eW9rndP2" target="_blank">
+									The Commerce Club <br/>
+									17th Floor <br/>
+									55 Beattie Place <br/>
+									Greenville, SC 29601 <br/>
+								</a>
+							</div>
+						</li>
 						<li>
-							<span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
+							<span class="lnr lnr-clock event-info-icon"></span>9AM - 10:30AM, Apr 20, 2018</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -316,51 +328,7 @@
 					</div>
 					<div class="cta">
 						<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-ceremony">RSVP</a>
-						<a href="#" class="btn btn-primary">Get Driving Directions</a>
-					</div>
-				</div>
-			</li>
-			<li class="flex-responsive">
-				<div class="event-thumbnail">
-					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-				</div>
-				<div class="event-details animation-chain" data-animation="fadeInUp">
-					<h3>Wedding Dinner</h3>
-					<ul class="event-info">
-						<li>
-							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-						<li>
-							<span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
-					</ul>
-					<div class="desc">
-						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
-							eu erat. Consectetur risus scelerisque.</p>
-					</div>
-					<div class="cta">
-						<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-dinner">RSVP</a>
-						<a href="#" class="btn btn-primary">Get Driving Directions</a>
-					</div>
-				</div>
-			</li>
-			<li class="flex-responsive">
-				<div class="event-thumbnail">
-					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-				</div>
-				<div class="event-details animation-chain" data-animation="fadeInUp">
-					<h3>Wedding Party</h3>
-					<ul class="event-info">
-						<li>
-							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-						<li>
-							<span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
-					</ul>
-					<div class="desc">
-						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
-							eu erat. Consectetur risus scelerisque.</p>
-					</div>
-					<div class="cta">
-						<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-party">RSVP</a>
-						<a href="#" class="btn btn-primary">Get Driving Directions</a>
+						<a href="https://goo.gl/maps/4Dz6eW9rndP2" target="_blank" class="btn">Get Driving Directions</a>
 					</div>
 				</div>
 			</li>
