--- a/index.html
+++ b/index.html
@@ -368,8 +368,7 @@
 				</div>
 			</li>
 			<li class="flex-responsive">
-				<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD9W_iMk8m5ZTOHLUTwN6QhNPg_B0rALlc&q=Greenville,SC"
-				 allowfullscreen>
+				<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/d/embed?mid=1BK6pKiLPCR9WntK8ZaQ0fDYSOVc" allowfullscreen>
 				</iframe>
 			</li>
 		</ul>
