images and people

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			</div>
 			<div class="bride">
 				<div class="profile-pic animation-chain" data-animation="fadeInUp">
-					<img src="img/placeholders/800x800.png" alt="">
+					<img src="img/couple/bride.jpg" alt="">
 				</div>
 				<h3>Sarah Tennant</h3>
 				<h4>Bride</h4>
@@ -376,72 +376,46 @@
 
 	<section id="people" class="section-people">
 		<h2>People</h2>
-		<div class="section-intro">
-			<p>Lorem ipsum Fusce ad nec accumsan erat per quam. Vitae per conubia urna iaculis. Id urna, iaculis. Tincidunt placerat
-				lectus purus, Donec tortor.</p>
-		</div>
 		<div class="container-fluid">
 			<h3>Parents</h3>
 			<div class="row animation-chain" data-animation="fadeInUp">
-				<div class="col-sm-3">
+				<div class="col-sm-6 person-col">
 					<div class="profile-pic">
 						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
 					</div>
-					<h4>Dennis Rodriquez</h4>
+					<h4>Beth &amp; Jimmy Withers</h4>
 				</div>
-				<div class="col-sm-3">
+				<div class="col-sm-6 person-col">
 					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/people/jeanne_and_david_tennant.jpg" alt="">
 					</div>
-					<h4>Catherine Rodriquez</h4>
-				</div>
-				<div class="col-sm-3">
-					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-					</div>
-					<h4>Milton Diaz</h4>
-				</div>
-				<div class="col-sm-3">
-					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-					</div>
-					<h4>Stephanie Diaz</h4>
+					<h4>Jeanne &amp; David Tennant</h4>
 				</div>
 			</div>
+
 			<h3>Siblings</h3>
 			<div class="row animation-chain" data-animation="fadeInUp">
-				<div class="col-sm-3">
+				<div class="col-sm-6 person-col">
 					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/people/katie_and_ryan_howard.jpg" alt="">
 					</div>
-					<h4>Rose Hale</h4>
+					<h4>Katie &amp; Ryan Howard</h4>
 				</div>
-				<div class="col-sm-3">
+				<div class="col-sm-6 person-col">
 					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/people/scott_tennant.jpg" alt="">
 					</div>
-					<h4>Dana Dunn</h4>
-				</div>
-				<div class="col-sm-3">
-					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-					</div>
-					<h4>Anita Hawkins</h4>
-				</div>
-				<div class="col-sm-3">
-					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-					</div>
-					<h4>Cherly Diaz</h4>
+					<h4>Scott Tennant</h4>
 				</div>
 			</div>
+
 			<h3>Flower Girl</h3>
 			<div class="row animation-chain" data-animation="fadeInUp">
-				<div class="col-sm-3" style="float:none;margin:0 auto;">
+				<div class="col-sm-6 person-col" style="float:none;margin:0 auto;">
 					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/people/audrey_henson.jpg" alt="">
 					</div>
-					<h4>Walter Morgan</h4>
+					<h4>Audrey Henson</h4>
 				</div>
 			</div>
 		</div>
