--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			<li class="flex-responsive">
 				<div class="meta">
 					<div class="timeline-thumbnail">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/placeholders/kettlebell.jpg" alt="">
 					</div>
 					<div class="date">Winter 2016</div>
 				</div>
@@ -240,7 +240,7 @@
 			<li class="flex-responsive">
 				<div class="meta">
 					<div class="timeline-thumbnail">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/placeholders/pills.jpg" alt="">
 					</div>
 					<div class="date">Fall 2016</div>
 				</div>
@@ -261,7 +261,7 @@
 			<li class="flex-responsive">
 				<div class="meta">
 					<div class="timeline-thumbnail">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/placeholders/easter-eggs.jpg" alt="">
 					</div>
 					<div class="date">Easter 2017</div>
 				</div>
@@ -282,7 +282,7 @@
 		</ul>
 	</section>
 
-	<div class="separator parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8">
+	<div class="separator parallax" data-background-image="img/placeholders/flower-countdown.jpg" data-parallax-factor=".8">
 		<div class="flowers"></div>
 		<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Best Day Ever</h2>
 		<div class="decor">
