hotel and more pictures

--- a/index.html
+++ b/index.html
@@ -349,21 +349,29 @@
 		<ul class="event-list">
 			<li class="flex-responsive">
 				<div class="event-thumbnail">
-					<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+					<img class="img-as-bg" src="img/hotels/hampton_inn_the_parkway.jpg" alt="">
 				</div>
 				<div class="event-details animation-chain" data-animation="fadeInUp">
-					<h3>Hotel A</h3>
+					<h3>The Hampton Inn</h3>
 					<ul class="event-info">
 						<li>
-							<span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
+							<div class="lnr lnr-map-marker event-info-icon"></div>
+							<div class="event-info-addr">
+								<a href="https://goo.gl/maps/nDQLPNnCPfy" target="_blank">
+									Hampton Inn <br/>
+									128 The Parkway<br/>
+									Greenville, SC 29615
+								</a>
+							</div>
+						</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
 							eu erat. Consectetur risus scelerisque.</p>
 					</div>
 					<div class="cta">
-						<a href="#" class="btn btn-flat" data-event="wedding-party">Expedia</a>
-						<a href="#" class="btn btn-flat">Map</a>
+						<a href="http://hamptoninn3.hilton.com/en/hotels/south-carolina/hampton-inn-and-suites-greenville-airport-GSPAPHX/index.html" class="btn btn-flat" data-event="wedding-party">Book</a>
+						<a href="https://goo.gl/maps/nDQLPNnCPfy" class="btn btn-flat">Map</a>
 					</div>
 				</div>
 			</li>
@@ -381,7 +389,7 @@
 			<div class="row animation-chain" data-animation="fadeInUp">
 				<div class="col-sm-6 person-col">
 					<div class="profile-pic">
-						<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+						<img class="img-as-bg" src="img/people/withers.jpg" alt="">
 					</div>
 					<h4>Beth &amp; Jimmy Withers</h4>
 				</div>
@@ -409,16 +417,23 @@
 				</div>
 			</div>
 
-			<h3>Flower Girl</h3>
+			<h3>Flower Girls</h3>
 			<div class="row animation-chain" data-animation="fadeInUp">
-				<div class="col-sm-6 person-col" style="float:none;margin:0 auto;">
+				<div class="col-sm-6 person-col">
 					<div class="profile-pic">
 						<img class="img-as-bg" src="img/people/audrey_henson.jpg" alt="">
 					</div>
 					<h4>Audrey Henson</h4>
 				</div>
+				<div class="col-sm-6 person-col">
+						<div class="profile-pic">
+							<img class="img-as-bg" src="img/people/claire_compton.jpg" alt="">
+						</div>
+						<h4>Claire Compton</h4>
+					</div>
 			</div>
 		</div>
+		
 	</section>
 
 	<section id="gifts" class="section-gifts">
