add camera roll images, update wedding time, update hotel booking link

--- a/index.html
+++ b/index.html
@@ -190,23 +190,32 @@
 	<div class="separator">
 		<div class="separator-carousel">
 			<div class="owl-carousel owl-theme">
-				<a href="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" class="item">
-					<img src="img/engagement/21586629_1441146145921451_4801157699186090259_o.jpg" alt="" class="img-as-bg">
+				<a href="img/camera-roll/blue-steel.jpg" class="item">
+				<img src="img/camera-roll/blue-steel.jpg" alt="" class="img-as-bg" />
+				</a>	
+				<a href="img/camera-roll/crossfit.jpg" class="item">
+				<img src="img/camera-roll/crossfit.jpg" alt="" class="img-as-bg">
 				</a>
-				<a href="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" class="item">
-					<img src="img/engagement/21587095_1441146142588118_3896546271355715125_o.jpg" alt="" class="img-as-bg">
+				<a href="img/camera-roll/dasher-and-cupid.jpg" class="item">
+				<img src="img/camera-roll/dasher-and-cupid.jpg" alt="" class="img-as-bg">
 				</a>
-				<a href="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" class="item">
-					<img src="img/engagement/21587255_1441146342588098_5689004720363691627_o.jpg" alt="" class="img-as-bg">
+				<a href="img/camera-roll/engagement.jpg" class="item">
+				<img src="img/camera-roll/engagement.jpg" alt="" class="img-as-bg">
 				</a>
-				<a href="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" class="item">
-					<img src="img/engagement/21641085_1441146199254779_3473572180956818068_o.jpg" alt="" class="img-as-bg">
+				<a href="img/camera-roll/greenville.jpg" class="item">
+				<img src="img/camera-roll/greenville.jpg" alt="" class="img-as-bg">
 				</a>
-				<a href="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" class="item">
-					<img src="img/engagement/21753044_1441146105921455_1364952493931930260_o.jpg" alt="" class="img-as-bg">
+				<a href="img/camera-roll/groom.jpg" class="item">
+				<img src="img/camera-roll/groom.jpg" alt="" class="img-as-bg">
 				</a>
-				<a href="img/engagement/21762588_1441146302588102_6228800564696333016_o.jpg" class="item">
-					<img src="img/engagement/21762588_1441146302588102_6228800564696333016_o.jpg" alt="" class="img-as-bg">
+				<a href="img/camera-roll/rivals.jpg" class="item">
+				<img src="img/camera-roll/rivals.jpg" alt="" class="img-as-bg">
+				</a>
+				<a href="img/camera-roll/sledding.JPG" class="item">
+				<img src="img/camera-roll/sledding.JPG" alt="" class="img-as-bg">
+				</a>
+				<a href="img/camera-roll/walking-around-keeneland.jpg" class="item">
+				<img src="img/camera-roll/walking-around-keeneland.jpg" alt="" class="img-as-bg">
 				</a>
 			</div>
 		</div>
@@ -288,7 +297,7 @@
 		<div class="decor">
 			<i class="fa fa-heart-o"></i>
 		</div>
-		<div class="countdown-area" data-final-date="2018/04/20 23:59:59" data-after-countdown="Thank you for attending our wedding!"></div>
+		<div class="countdown-area" data-final-date="2018/04/20 17:30:00" data-after-countdown="Thank you for attending our wedding!"></div>
 	</div>
 
 	<section id="events" class="section-events">
@@ -320,7 +329,7 @@
 							</div>
 						</li>
 						<li>
-							<span class="lnr lnr-clock event-info-icon"></span>9AM - 10:30AM, Apr 20, 2018</li>
+							<span class="lnr lnr-clock event-info-icon"></span>5:30PM - 10:00AM, Apr 20, 2018</li>
 					</ul>
 					<div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -370,7 +379,7 @@
 							eu erat. Consectetur risus scelerisque.</p>
 					</div>
 					<div class="cta">
-						<a href="http://hamptoninn3.hilton.com/en/hotels/south-carolina/hampton-inn-and-suites-greenville-airport-GSPAPHX/index.html" class="btn btn-flat" data-event="wedding-party">Book</a>
+						<a href=" http://group.hamptoninn.com/tennant-withers-wedding" class="btn btn-flat" data-event="wedding-party">Book</a>
 						<a href="https://goo.gl/maps/nDQLPNnCPfy" class="btn btn-flat">Map</a>
 					</div>
 				</div>
