add hyatt hotel

--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@
 				officia quasi eaque ut necessitatibus aliquam ab quae aut. Commodi ut neque libero, itaque.</p>
 		</div>
 		<ul class="event-list">
+
+			<!-- hampton inn -->
 			<li class="flex-responsive">
 				<div class="event-thumbnail">
 					<img class="img-as-bg" src="img/hotels/hampton_inn_the_parkway.jpg" alt="">
@@ -374,16 +376,46 @@
 							</div>
 						</li>
 					</ul>
-					<div class="desc">
+					<!-- <div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
 							eu erat. Consectetur risus scelerisque.</p>
-					</div>
+					</div> -->
 					<div class="cta">
 						<a href=" http://group.hamptoninn.com/tennant-withers-wedding" class="btn btn-flat" data-event="wedding-party">Book</a>
 						<a href="https://goo.gl/maps/nDQLPNnCPfy" class="btn btn-flat">Map</a>
 					</div>
 				</div>
 			</li>
+
+			<!-- hyatt regency -->
+			<li class="flex-responsive">
+				<div class="event-thumbnail">
+					<img class="img-as-bg" src="img/hotels/hyatt_regency.jpg" alt="">
+				</div>
+				<div class="event-details animation-chain" data-animation="fadeInUp">
+					<h3>Hyatt Regency</h3>
+					<ul class="event-info">
+						<li>
+							<div class="lnr lnr-map-marker event-info-icon"></div>
+							<div class="event-info-addr">
+								<a href="https://goo.gl/maps/HT5adGVLt9v" target="_blank">
+									Hyatt Regency
+									<br/> 220 North Main Street
+									<br/> Greenville, SC 29601
+								</a>
+							</div>
+						</li>
+					</ul>
+					<!-- <div class="desc">
+						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies eu erat. Consectetur risus scelerisque.</p>
+					</div> -->
+					<div class="cta">
+						<a href="https://aws.passkey.com/gt/lodging/216155354?gtid=2b925abdeb0db1858fc261f3f0823e0d" class="btn btn-flat" data-event="wedding-party">Book</a>
+						<a href="https://goo.gl/maps/HT5adGVLt9v" class="btn btn-flat">Map</a>
+					</div>
+				</div>
+			</li>
+
 			<li class="flex-responsive">
 				<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/d/embed?mid=1BK6pKiLPCR9WntK8ZaQ0fDYSOVc" allowfullscreen>
 				</iframe>
