remove "latin" placeholder text

--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 	<section id="couple" class="section-couple">
 		<div class="flowers"></div>
 		<h2>Couple</h2>
-		<div class="section-intro">
+		<!-- <div class="section-intro">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dignissimos voluptate reprehenderit inventore quis dicta,
 				aliquam possimus, explicabo assumenda, dolore consequatur praesentium iusto odio esse corporis fugiat pariatur a vel.</p>
-		</div>
+		</div> -->
 		<div class="bride-and-groom flex-responsive">
 			<div class="groom">
 				<div class="profile-pic animation-chain" data-animation="fadeInUp">
@@ -302,10 +302,10 @@
 
 	<section id="events" class="section-events">
 		<h2>Events</h2>
-		<div class="section-intro">
+		<!-- <div class="section-intro">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit voluptates velit, corrupti magnam ad assumenda, debitis
 				officia quasi eaque ut necessitatibus aliquam ab quae aut. Commodi ut neque libero, itaque.</p>
-		</div>
+		</div> -->
 		
 		
 		
@@ -331,10 +331,10 @@
 						<li>
 							<span class="lnr lnr-clock event-info-icon"></span>5:30PM - 10:00AM, Apr 20, 2018</li>
 					</ul>
-					<div class="desc">
+					<!-- <div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
 							eu erat. Consectetur risus scelerisque.</p>
-					</div>
+					</div> -->
 					<div class="cta">
 						<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-ceremony">RSVP</a>
 						<a href="https://goo.gl/maps/4Dz6eW9rndP2" target="_blank" class="btn">Get Driving Directions</a>
@@ -351,10 +351,10 @@
 
 	<section id="hotels" class="section-events">
 		<h2>Hotels</h2>
-		<div class="section-intro">
+		<!-- <div class="section-intro">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit voluptates velit, corrupti magnam ad assumenda, debitis
 				officia quasi eaque ut necessitatibus aliquam ab quae aut. Commodi ut neque libero, itaque.</p>
-		</div>
+		</div> -->
 		<ul class="event-list">
 
 			<!-- hampton inn -->
@@ -479,10 +479,10 @@
 
 	<section id="gifts" class="section-gifts">
 		<h2>Gift Registries</h2>
-		<div class="section-intro">
+		<!-- <div class="section-intro">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident hic culpa laudantium, adipisci quaerat magnam dicta
 				harum vitae velit! Dicta soluta et quos consectetur iste officia est quisquam pariatur laboriosam.</p>
-		</div>
+		</div> -->
 		<div class="container-fluid retailer-list">
 			<div class="row">
 				<div class="col-sm-6">
