khols + groom pic

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		<div class="bride-and-groom flex-responsive">
 			<div class="groom">
 				<div class="profile-pic animation-chain" data-animation="fadeInUp">
-					<img src="img/placeholders/800x800.png" alt="">
+					<img src="img/couple/groom.jpg" alt="">
 				</div>
 				<h3>Daniel Withers</h3>
 				<h4>Groom</h4>
@@ -204,9 +204,6 @@
 				</a>
 				<a href="img/camera-roll/greenville.jpg" class="item">
 				<img src="img/camera-roll/greenville.jpg" alt="" class="img-as-bg">
-				</a>
-				<a href="img/camera-roll/groom.jpg" class="item">
-				<img src="img/camera-roll/groom.jpg" alt="" class="img-as-bg">
 				</a>
 				<a href="img/camera-roll/rivals.jpg" class="item">
 				<img src="img/camera-roll/rivals.jpg" alt="" class="img-as-bg">
@@ -329,7 +326,7 @@
 							</div>
 						</li>
 						<li>
-							<span class="lnr lnr-clock event-info-icon"></span>5:30PM - 10:00AM, Apr 20, 2018</li>
+							<span class="lnr lnr-clock event-info-icon"></span>5:30PM - 10:00PM, Apr 20, 2018</li>
 					</ul>
 					<!-- <div class="desc">
 						<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies
@@ -485,20 +482,23 @@
 		</div> -->
 		<div class="container-fluid retailer-list">
 			<div class="row">
-				<div class="col-sm-6">
+				 <!-- col-sm-6 -->
+				<div class="col-sm-12">
+					<a href="https://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=3375934&viewtype=listview&isfromsearch=true&fname=sarah&lname=Tennant&regtype=registry.wedding,registry.baby,registry.splday&state=SC">
+						<div class="retailer-thumbnail">
+							<img src="img/gift-registries/kohls.jpg" alt="">
+						</div>
+						<h4>Khohl's</h4>
+					</a>
+				</div>
+				<!-- <div class="col-sm-6">
 					<div class="retailer-thumbnail">
 						<img src="img/placeholders/360x120.png" alt="">
 					</div>
 					<h4>ABC Shop</h4>
-				</div>
-				<div class="col-sm-6">
-					<div class="retailer-thumbnail">
-						<img src="img/placeholders/360x120.png" alt="">
-					</div>
-					<h4>ABC Shop</h4>
-				</div>
+				</div> -->
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-sm-6">
 					<div class="retailer-thumbnail">
 						<img src="img/placeholders/360x120.png" alt="">
@@ -511,7 +511,7 @@
 					</div>
 					<h4>ABC Shop</h4>
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 	</section>
