--- a/index.html
+++ b/index.html
@@ -483,12 +483,20 @@
 		<div class="container-fluid retailer-list">
 			<div class="row">
 				 <!-- col-sm-6 -->
-				<div class="col-sm-12">
+				<div class="col-sm-6">
 					<a href="https://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=3375934&viewtype=listview&isfromsearch=true&fname=sarah&lname=Tennant&regtype=registry.wedding,registry.baby,registry.splday&state=SC">
 						<div class="retailer-thumbnail">
 							<img src="img/gift-registries/kohls.jpg" alt="">
 						</div>
 						<h4>Khohl's</h4>
+					</a>
+				</div>
+				<div class="col-sm-6">
+					<a href="https://www.amazon.com/wedding/sarah-tennant-daniel-withers-greenville-april-2018/registry/2F1X1WBTMW8PT">
+						<div class="retailer-thumbnail">
+							<img src="img/gift-registries/amazon.png" alt="">
+						</div>
+						<h4>Amazon</h4>
 					</a>
 				</div>
 				<!-- <div class="col-sm-6">
