gift registries blank

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 			<div class="row">
 				 <!-- col-sm-6 -->
 				<div class="col-sm-6">
-					<a href="https://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=3375934&viewtype=listview&isfromsearch=true&fname=sarah&lname=Tennant&regtype=registry.wedding,registry.baby,registry.splday&state=SC">
+					<a href="https://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=3375934&viewtype=listview&isfromsearch=true&fname=sarah&lname=Tennant&regtype=registry.wedding,registry.baby,registry.splday&state=SC" target="_blank">
 						<div class="retailer-thumbnail">
 							<img src="img/gift-registries/kohls.jpg" alt="">
 						</div>
@@ -492,7 +492,7 @@
 					</a>
 				</div>
 				<div class="col-sm-6">
-					<a href="https://www.amazon.com/wedding/sarah-tennant-daniel-withers-greenville-april-2018/registry/2F1X1WBTMW8PT">
+					<a href="https://www.amazon.com/wedding/sarah-tennant-daniel-withers-greenville-april-2018/registry/2F1X1WBTMW8PT" target="_blank">
 						<div class="retailer-thumbnail">
 							<img src="img/gift-registries/amazon.png" alt="">
 						</div>
